Fix alignment issue

--- a/client/app/visualizations/components/EditVisualizationDialog.less
+++ b/client/app/visualizations/components/EditVisualizationDialog.less
@@ -4,13 +4,13 @@
     height: 100%;
 
     .visualization-settings {
-      padding: 0px 12px;
+      padding-right: 12px;
       width: 40%;
       overflow: auto;
     }
 
     .visualization-preview {
-      padding: 0px 12px;
+      padding-left: 12px;
       width: 60%;
       overflow: auto;
     }
